Fix alignement on some portrait images

--- a/frontend/scss/organisms/_o-custom-tours-builder.scss
+++ b/frontend/scss/organisms/_o-custom-tours-builder.scss
@@ -74,6 +74,9 @@
 }
 
 .aic-ct-preview__image {
+  display: flex;
+  justify-content: center;
+
   img {
     max-height: 500px;
     margin-bottom: 32px;
